--- a/views/css/style_cadastro_aluno.css
+++ b/views/css/style_cadastro_aluno.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     font-family: 'Courier New', Courier, monospace;
+   
 }
 
 body{
@@ -10,16 +11,19 @@ body{
 .principal{
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 .principal-form{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     height: 50vh;
+    width: 50%;
     gap: 2%;
     border: 1px solid rgb(220, 220, 220);
     padding: 4%;
     border-radius: 10px;
-    margin-top: 5%;
+    margin: 5% auto;
 }
 .btn-enviar{
     height: 5vh;
@@ -28,10 +32,28 @@ body{
     border-radius: 10px;
     font-weight: 600;
     margin-top: 10%;
+    width: 50%;
+    align-self: center;
 }
 label, input{
     font-size: 16pt;
 }
 input[type="text"], input[type="date"]{
     height: 6vh;
+}
+.principal-link-lista{
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    padding: 2%;
+    background-color: rgb(101, 162, 242);
+    width: 10%;
+    height: 2vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    border-radius: 10px;
 }
