--- a/views/css/style_lista_alunos.css
+++ b/views/css/style_lista_alunos.css
@@ -2,14 +2,20 @@
     margin: 0;
 }
 .principal{
-    width: 100%;
-    height: 100vh;
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
+.principal-nav{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    margin: 1% 1%;
+    height: 10vh;
+    border: 1px solid red;
+}
 .principal-tabela{
-    margin-top: 5%;
+    margin-top: 2%;
     height: 70vh;
     border: 1px solid gray;
     width: 70%;
@@ -39,6 +45,20 @@ th{
     align-items: center;
     margin-left: 2%;
     border-radius: 10px;
+}
+.btn-sair{
+    height: 2vh;
+    background-color: rgb(231, 50, 37);
+    border: none;
+    border-radius: 10px;
+    font-weight: 600;
+    width: 8%;
+    padding: 1%;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
 }
 .coluna-acoes{
     display: flex;
